--- a/src/hip/CMakeLists.txt
+++ b/src/hip/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 #     gfx1010 gfx1011 gfx1012 gfx1013  # Navi1
 #     gfx900 gfx902 gfx904 gfx906 gfx908 gfx909 gfx90a gfx90c gfx940 gfx941 gfx942
 #     CACHE STRING "AMD HIP architectures to build binaries for")
-set(hip_binaries_arch gfx1030 gfx1031 gfx90c CACHE STRING "AMD HIP architectures to build binaries for")
+set(hip_binaries_arch)
 set(target_gpus)
 foreach(arch ${hip_binaries_arch})
     list(APPEND target_gpus "--offload-arch=${arch}")
