port hip examples to cuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,20 +12,20 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(src/stb_impl)
 
-find_file(CUDA_EXECUTABLE hipcc)
-if(CUDA_EXECUTABLE)
+find_package(CUDAToolkit)
+if(CUDAToolkit_FOUND)
     add_subdirectory(src/cuda)
 else()
     message(WARNING "Cuda not found.")
 endif()
 
-find_file(HIPCC_EXECUTABLE hipcc)
-if(HIPCC_EXECUTABLE)
+find_package(HIP)
+if(HIP_FOUND)
     add_subdirectory(src/hip)
 else()
     message(WARNING "Hip not found.")
 endif()
 
-if (NOT CUDA_EXECUTABLE AND NOT HIPCC_EXECUTABLE)
+if (NOT CUDAToolkit_FOUND AND NOT HIP_FOUND)
     message(FATAL_ERROR "Cuda and hip not found")
 endif()
