fix hip compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,21 @@ else()
     message(WARNING "Cuda not found.")
 endif()
 
-find_package(HIP)
-if(HIP_FOUND)
+if(UNIX)
+    if(NOT DEFINED ROCM_PATH)
+        set(ROCM_PATH "/opt/rocm" CACHE STRING "Default ROCM installation directory.")
+    endif()
+    # Search for rocm in common locations
+    list(APPEND CMAKE_PREFIX_PATH ${ROCM_PATH})
+endif()
+
+find_package(hip)
+if(hip_FOUND)
     add_subdirectory(src/hip)
 else()
     message(WARNING "Hip not found.")
 endif()
 
-if (NOT CUDAToolkit_FOUND AND NOT HIP_FOUND)
+if (NOT CUDAToolkit_FOUND AND NOT hip_FOUND)
     message(FATAL_ERROR "Cuda and hip not found")
 endif()
